# luximus

./: .env.example  .gitignore  Procfile  pyproject.toml
app/: main.py
app/agents/: background_agent.py  main_agent.py  onboarding_agent.py
app/core/: config.py
app/db/: session.py
app/flows/: create_agents_flow.py  google_integration_flow.py  whatsapp_integration_flow.py
app/models/: user.py
app/routers/: google_callback.py  short_links.py  tools.py  user_router.py  webhook.py
app/schemas/: user.py
app/services/: flow_repository.py  google_service.py  letta_service.py  short_links.py  user_service.py  webhook.py  webhook_service.py  whatsapp_service.py
app/utils/: archival_memory_manager.py  celery_app.py  celery_imports.py  integration_manager.py  onboarding.py  state_utils_jwt.py  system_prompt_text.py  tasks.py  whatsapp_integration_flow.py  wpp_integration_flow_ruim.py
scripts/: reset_redis.py
