[project]
name = "luximus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.6",
    "letta-client>=0.1.16",
    "mysql-connector-python>=9.2.0",
    "passlib>=1.7.4",
    "pydantic-settings>=2.7.1",
    "pydantic[email]>=2.10.5",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.37",
    "taskipy>=1.14.1",
    "uvicorn>=0.34.0",
]

[tool.taskipy.tasks]
ngrok = "ngrok http 8000"
serve = "uvicorn app.main:app --reload --port 8000 --workers 2"
